# coffee_image_resizer

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Readme.md  pyproject.toml
.tekton/: pipelineRun_pvc_template.yaml
resize/: __main__.py  main.py  settings.py
resize/config/: log_levels.py
resize/exceptions/: __init__.py  exceptions.py
resize/kafka/: consumer.py
resize/resizer/: image_resizer.py  resize.py
resize/s3/: object.py  objectCRUD.py  service.py
resize/types/: __init__.py  kafka_security_protocol.py  kafka_ssl_protocol.py  message_handler.py  readable.py  reduce_type.py
scripts/: format_lint_test.sh  lint.sh  test.sh
tests/: conftest.py  docker-compose.yml  test_main.py
tests/kafka/: test_consumer.py
tests/resizer/: test_image_resizer.py
tests/s3/: test_service.py
