[tool.poetry]
name = "resize"
version = "0.1.0"
description = ""
authors = ["anixel <45008199+andifg@users.noreply.github.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"
aiokafka = "^0.10.0"
minio = "^7.2.4"
pydantic-settings = "^2.2.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"
kafka-python = "^2.0.2"
pytest-docker = "^3.1.1"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=resize"
testpaths = ["tests"]

[tool.isort]
line_length = 80
profile = "black"

[tool.black]
line-length = 80